# py3status-http-monitor

./: PKGBUILD  README.md  http_monitor.py  pyproject.toml
src/: py3status_http_monitor.py
src/py3status_http_monitor/: http_monitor.py
